hiding scrollbars on minilayer, fixes #16

--- a/data/minilayer.css
+++ b/data/minilayer.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
     padding: 0;
 }
+body:not(.measuring),
+body:not(.measuring) * {
+    overflow: hidden;
+}
 
 body > div {
     display: flex;
